--- a/charity-events-project/client-website/event.html
+++ b/charity-events-project/client-website/event.html
@@ -12,8 +12,11 @@
     <header>
         <nav class="navbar" role="navigation" aria-label="Main navigation">
             <div class="nav-container">
-                <a href="index.html" class="nav-logo" aria-label="CharityEvents Home">
-                    <span class="logo-icon">❤️</span>
+                <a href="/" class="nav-logo" aria-label="CharityEvents Home">
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16 28C16 28 3 19 3 11C3 7 6 4 10 4C13 4 16 6 16 6C16 6 19 4 22 4C26 4 29 7 29 11C29 19 16 28 16 28Z" 
+                              fill="#e74c3c" stroke="#c0392b" stroke-width="2"/>
+                    </svg>
                     CharityEvents
                 </a>
                 <ul class="nav-menu" role="menubar">
@@ -107,7 +110,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 CharityEvents. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+                <p>&copy; 2025 CharityEvents. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
             </div>
         </div>
     </footer>
