--- a/charity-events-project/client-website/event.html
+++ b/charity-events-project/client-website/event.html
@@ -313,8 +313,8 @@
                     <p>We're working hard to bring you a seamless registration experience. This feature will be available in our next update.</p>
                     <p>In the meantime, please contact us directly for event registration:</p>
                     <p style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin: 1rem 0;">
-                        📧 <strong>Email:</strong> info@charityevents.org<br>
-                        📞 <strong>Phone:</strong> (555) 123-4567
+                        📧 <strong>Email:</strong> 3116249871@qq.com<br>
+                        📞 <strong>Phone:</strong> 151-3687-6755
                     </p>
                 </div>
             </div>
