--- a/charity-events-project/client-website/search.html
+++ b/charity-events-project/client-website/search.html
@@ -46,20 +46,63 @@
 
                 <!-- 搜索表单 -->
                 <form id="search-form" class="search-form" role="search" aria-label="Search events">
-                    <div class="form-grid">
-                        <!-- 日期筛选 -->
-                        <div class="form-group">
-                            <label for="date-filter" class="form-label">📅 Date</label>
-                            <input 
-                                type="date" 
-                                id="date-filter" 
-                                name="date"
-                                aria-describedby="date-help"
-                                class="form-input"
-                                placeholder="yyyy/mm/dd" 
-                            >
-                            <small id="date-help" class="form-help">📅 Filter events by specific date</small>
+                <!-- 替换原来的日期输入 -->
+                <div class="form-group">
+                    <label for="date-filter" class="form-label">📅 Date</label>
+                    <div class="custom-date-container">
+                        <input 
+                            type="text" 
+                            id="date-filter" 
+                            name="date"
+                            aria-describedby="date-help"
+                            class="form-input date-input"
+                            placeholder="Click to select date"
+                            readonly
+                        >
+                        <button type="button" class="date-picker-toggle" aria-label="Open date picker">
+                            📅
+                        </button>
+                    </div>
+                    <small id="date-help" class="form-help">📅 Filter events by specific date</small>
+                </div>
+
+                <!-- 在页面底部添加日期选择器模态框 -->
+                <div id="date-picker-modal" class="modal hidden">
+                    <div class="modal-overlay"></div>
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3>Select Date</h3>
+                            <button type="button" class="modal-close" aria-label="Close date picker">×</button>
                         </div>
+                        <div class="modal-body">
+                            <div class="date-picker">
+                                <div class="date-picker-header">
+                                    <button type="button" class="nav-btn prev-month" aria-label="Previous month">‹</button>
+                                    <div class="current-month-year">
+                                        <span id="current-month"></span>
+                                        <span id="current-year"></span>
+                                    </div>
+                                    <button type="button" class="nav-btn next-month" aria-label="Next month">›</button>
+                                </div>
+                                <div class="date-picker-weekdays">
+                                    <div>Sun</div>
+                                    <div>Mon</div>
+                                    <div>Tue</div>
+                                    <div>Wed</div>
+                                    <div>Thu</div>
+                                    <div>Fri</div>
+                                    <div>Sat</div>
+                                </div>
+                                <div class="date-picker-days" id="date-picker-days"></div>
+                                <div class="date-picker-actions">
+                                    <button type="button" class="btn btn-secondary" id="clear-date">Clear</button>
+                                    <button type="button" class="btn btn-secondary" id="today-date">Today</button>
+                                    <button type="button" class="btn btn-primary" id="confirm-date">Confirm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                         <!-- 地点筛选 -->
                         <div class="form-group">
